# pipuck_sim

./: install.sh
argos3/src/core/simulator/: loop_functions.h
argos3/src/core/simulator/entity/: embodied_entity.h
argos3/src/core/simulator/visualization/: default_visualization.cpp
argos3/src/plugins/robots/generic/: CMakeLists.txt
argos3/src/plugins/robots/generic/simulator/: colored_blob_omnidirectional_camera_directional_sensor.cpp  colored_blob_omnidirectional_camera_directional_sensor.h  colored_blob_omnidirectional_camera_rotzonly_sensor.cpp
argos3/src/plugins/robots/pi-puck/: CMakeLists.txt
argos3/src/plugins/robots/pi-puck/control_interface/: ci_pipuck_color_leds_actuator.cpp  ci_pipuck_color_leds_actuator.h  ci_pipuck_differential_drive_actuator.h  ci_pipuck_system_sensor.h
argos3/src/plugins/robots/pi-puck/simulator/: pipuck_color_leds_actuator.cpp  pipuck_color_leds_actuator.h  pipuck_differential_drive_default_actuator.cpp  pipuck_entity.cpp  pipuck_entity.h  qtopengl_pipuck.cpp
argos3/src/plugins/simulator/entities/: led_equipped_entity.cpp  led_equipped_entity.h
docs/: installation.md  troubleshoot.md
pipuck_ws/: CMakeLists.txt  compile_ws.sh
pipuck_ws/controllers/: CMakeLists.txt  controller0.cpp  controller0.hpp
pipuck_ws/experiments/: config0.argos
pipuck_ws/loop_functions/: CMakeLists.txt  loop_functions.cpp  loop_functions.hpp
